# theme-generator

./: CMakeLists.txt  readme.md
src/: ClusteringAlgorithm.hpp  ColorTransformation.cpp  ColorTransformation.hpp  DebugClustering.cpp  DebugClustering.hpp  ImageHandler.cpp  ImageHandler.hpp  Main.cpp
